--- a/lab-sql-query-from-table-names.ipynb
+++ b/lab-sql-query-from-table-names.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "7fbbdf5b-4d7f-4496-8f40-9d15ea46d023",
    "metadata": {
     "id": "7fbbdf5b-4d7f-4496-8f40-9d15ea46d023"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e480bbfb-9a80-4ea6-b792-067e63ae3148",
    "metadata": {
     "id": "e480bbfb-9a80-4ea6-b792-067e63ae3148"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6d5d2bdc-d822-4ed8-815e-b3f223730f15",
    "metadata": {
     "id": "6d5d2bdc-d822-4ed8-815e-b3f223730f15",
@@ -75,10 +75,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       table                                         definition\n",
-      "0  employees                      Employee information, name...\n",
-      "1     salary                       Salary details for each year\n",
-      "2    studies  Educational studies, name of the institution, ...\n"
+      "      table                                         definition\n",
+      "0  employee  Employee information. Containts name, age, job...\n",
+      "1    salary  Salary details for each year, employee ID, sal...\n",
+      "2   studies  Educational studies such as institution name, ...\n"
      ]
     }
    ],
@@ -87,15 +87,22 @@
     "import pandas as pd\n",
     "\n",
     "# Table and definitions sample\n",
-    "data = {'table': # ENTER A TABLE COLUMNS HERE,\n",
-    "        'definition': # ENTER A TABLE DEFINITATIONS HERE\n",
+    "data = {\n",
+    "    'table': ['employee', 'salary', 'studies'],  # Table names\n",
+    "    'definition': [\n",
+    "        'Employee information. Containts name, age, job title, employee ID',\n",
+    "        'Salary details for each year, employee ID, salary amount, year',\n",
+    "        'Educational studies such as institution name, study type, level'\n",
+    "    ]  # Table definitions\n",
+    "}\n",
+    "\n",
     "df = pd.DataFrame(data)\n",
     "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "009e681c-d95d-4c9c-b044-5bfd76e3ad95",
    "metadata": {
     "id": "009e681c-d95d-4c9c-b044-5bfd76e3ad95"
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "fe03ac25-8d02-4cd1-99a1-be4220c6fd2d",
    "metadata": {
     "id": "fe03ac25-8d02-4cd1-99a1-be4220c6fd2d",
@@ -118,9 +125,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "employees: Employee information, name...\n",
-      "salary: Salary details for each year\n",
-      "studies: Educational studies, name of the institution, type of studies, level\n"
+      "employee: Employee information. Containts name, age, job title, employee ID\n",
+      "salary: Salary details for each year, employee ID, salary amount, year\n",
+      "studies: Educational studies such as institution name, study type, level\n"
      ]
     }
    ],
@@ -130,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "c7e275ae-f20d-4134-b9b6-d8677dfb544c",
    "metadata": {
     "id": "c7e275ae-f20d-4134-b9b6-d8677dfb544c"
@@ -151,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "b1cb5957-2df2-4e5e-9e6a-ace955c9817e",
    "metadata": {
     "id": "b1cb5957-2df2-4e5e-9e6a-ace955c9817e"
@@ -159,12 +166,12 @@
    "outputs": [],
    "source": [
     "#Creating the prompt, with the user questions and the tables definitions.\n",
-    "pqt1 = prompt_question_tables.format(tables=text_tables, question=#ENTER YOUR QUERY HERE)"
+    "pqt1 = prompt_question_tables.format(tables=text_tables, question='get me 5 employee names where their job title is AI engineer')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "10d30f2b-6c23-4fd6-8038-840fba784cce",
    "metadata": {
     "id": "10d30f2b-6c23-4fd6-8038-840fba784cce",
@@ -178,7 +185,7 @@
      "text": [
       "```json\n",
       "{\n",
-      "    \"tables\": [\"employees\", \"salary\"]\n",
+      "    \"tables\": [\"employee\"]\n",
       "}\n",
       "```\n"
      ]
@@ -190,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "57e07083-be8f-4cd0-95bd-c4b909422c6b",
    "metadata": {
     "id": "57e07083-be8f-4cd0-95bd-c4b909422c6b"
@@ -198,12 +205,12 @@
    "outputs": [],
    "source": [
     "pqt3 = prompt_question_tables.format(tables=text_tables,\n",
-    "                                     question=#ENTER YOUR QUERY HERE)"
+    "                                     question=\"get me 5 employees where their salary is higher than 50000$ per year\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "a0eeb79e-caf1-4f48-9897-168d95d2ae37",
    "metadata": {
     "id": "a0eeb79e-caf1-4f48-9897-168d95d2ae37",
@@ -216,11 +223,7 @@
      "text": [
       "```json\n",
       "{\n",
-      "    \"tables\": {\n",
-      "        \"employees\": \"Employee information\",\n",
-      "        \"salary\": \"Salary details for each year\",\n",
-      "        \"studies\": \"Educational studies\"\n",
-      "    }\n",
+      "    \"tables\": [\"employee\", \"salary\"]\n",
       "}\n",
       "```\n"
      ]
@@ -243,7 +246,59 @@
     "     - Be creative\n",
     " - Write a one page report summarizing your findings.\n",
     "     - Were there variations that didn't work well? i.e., where GPT either hallucinated or wrong\n",
-    " - What did you learn?"
+    "\n",
+    "    Everything worked well in my case, the model used is smart enough to pull out relational mappings of the tables.\n",
+    " - What did you learn?\n",
+    "    \n",
+    "    Generative text models can be useful in facilitating the SQL queries for non-techincal people. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9fa18dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_query_tables = \"\"\"\n",
+    "Given the following tables and their content definitions,\n",
+    "###Tables\n",
+    "{tables}\n",
+    "\n",
+    "Build an SQL query that satisfies the User Questions below and only return the query.\n",
+    "\n",
+    "###User Question:\n",
+    "{question}\n",
+    "\n",
+    "Example Question:\n",
+    "Give me the id of 5 employees where their job title is AI engineer?\n",
+    "Example Answer:\n",
+    "SELECT employee_id FROM  employee WHERE job_title = \"AI enigneer\"\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "pqt4 = prompt_query_tables.format(tables=text_tables, question='get me 5 employees where their salary is higher than 50000$ per year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "78a53daf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT employee_id \n",
+      "FROM salary \n",
+      "WHERE salary_amount > 50000\n",
+      "LIMIT 5;\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(return_OAI(pqt4))"
    ]
   }
  ],
@@ -253,7 +308,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
